update schema of `ai_model` table
Previously, the models were for chat interface of ragithub. But I
decided to focus on model store and not working on the chat interface
anymore.
